// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicsLine matches last snapshot 1`] = `
<div
  data-stylename="topicsLine newLineForTopics"
>
  <Link
    data-stylename="topic"
    key="one"
    to="/groups/hay/topics/one"
  >
    #
    one
  </Link>
  <Link
    data-stylename="topic"
    key="two"
    to="/groups/hay/topics/two"
  >
    #
    two
  </Link>
</div>
`;

exports[`matches announcement snapshot 1`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
        <span
          data-stylename="announcementSection"
        >
          <span
            data-stylename="announcementSpacer"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              data-stylename="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      data-stylename="upperRight"
    />
  </div>
</div>
`;

exports[`matches announcement snapshot 2`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
        <span
          data-stylename="announcementSection"
        >
          <span
            data-stylename="announcementSpacer"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              data-stylename="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
    </div>
  </div>
  <div
    data-stylename="timeWindow"
  />
</div>
`;

exports[`matches announcement snapshot 3`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
        <span
          data-stylename="announcementSection"
        >
          <span
            data-stylename="announcementSpacer"
          >
            •
          </span>
          <span
            data-for="announcement-tt"
            data-tip="Announcement"
          >
            <Icon
              data-stylename="announcementIcon"
              name="Announcement"
            />
          </span>
          <ReactTooltip
            clickable={false}
            delayShow={550}
            effect="solid"
            id="announcement-tt"
            insecure={true}
            resizeHide={true}
            wrapper="div"
          />
        </span>
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
      <Dropdown
        items={
          Array [
            Object {
              "icon": "Edit",
              "label": "Edit",
              "onClick": [Function],
            },
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
              "red": true,
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <div
    data-stylename="timeWindow"
  />
</div>
`;

exports[`matches snapshot 1`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
      </div>
    </div>
    <div
      data-stylename="upperRight"
    />
  </div>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
    </div>
  </div>
  <div
    data-stylename="timeWindow"
  />
</div>
`;

exports[`matches snapshot 3`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/all/members/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          to="/all/members/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
      <Dropdown
        items={
          Array [
            Object {
              "icon": "Edit",
              "label": "Edit",
              "onClick": [Function],
            },
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
              "red": true,
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <div
    data-stylename="timeWindow"
  />
</div>
`;
